--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="images/20240928_112244.jpg" download>Download Image</a>
 
         <!-- Download Link for ZIP File -->
-        <a href="files/20240928_112244.zip" download>Download ZIP File</a>
+        <!-- <a href="files/20240928_112244.zip" download>Download ZIP File</a> -->
         
         <!-- Image that can also be clicked to open in new tab -->
         <a href="images/20240928_112244.jpg" target="_blank">
