--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
         
         <!-- Image that can also be clicked to open in new tab -->
         <a href="images/20240928_112244.jpg" target="_blank">
-            <img src="images/20240928_112244.jpg" alt="Image 1">
+            <img src="images/20240928_112308.jpg" alt="Image 1">
         </a>
        
         <!-- Another image -->
-        <img src="images/20240928_112308.jpg" alt="Image 2">
+        <!-- <img src="images/20240928_112308.jpg" alt="Image 2"> -->
     </div>
 </body>
 </html>
+
+
+
